[package]
name = "glass-os"
version = "0.1.0"
authors = ["Kaution B <kaution3@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell-words = "1.0.0"
rust-argon2 = "0.8.3"
rand = "0.8.3"
rand_core = { version = "0.6.2", features = ["getrandom"] }
rand_chacha = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rpassword = "5.0.1"
chrono = "0.4.19"